--- a/NewsTask.Api/appsettings.json
+++ b/NewsTask.Api/appsettings.json
@@ -10,10 +10,11 @@
   },
   "AllowedHosts": "*",
 
-  "JWT\": {": null,
-  "Key": "1jyw4gAmCczbkLGF9Wx4KcyU7OI+/xDfp2xobDjpNIU=",
-  "Issuer": "SecureApi",
-  "Audience": "SecureApiUser",
-  "DurationInDays": 30
+  "JWT": {
+    "Key": "1jyw4gAmCczbkLGF9Wx4KcyU7OI+/xDfp2xobDjpNIU=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 30
+  }
 }
-}
+
