--- a/NewsTask.Api/appsettings.json
+++ b/NewsTask.Api/appsettings.json
@@ -1,6 +1,10 @@
 {
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server= DESKTOP-9NLPHPS; Database=News; Integrated Security= True "
+  //},
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server= DESKTOP-9NLPHPS; Database=News; Integrated Security= True "
+    "DefaultConnection": "Server= (localdb)\\MSSQLLocalDB; Database=News; Integrated Security= True "
   },
   "Logging": {
     "LogLevel": {
