--- a/NewsTask.Api/appsettings.json
+++ b/NewsTask.Api/appsettings.json
@@ -4,7 +4,7 @@
   //},
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server= (localdb)\\MSSQLLocalDB; Database=News; Integrated Security= True "
+    "DefaultConnection": "Server= MOAZ-MOSTAFA; Database=News; Integrated Security= True "
   },
   "Logging": {
     "LogLevel": {
