view for author and news

--- a/NewsTask.Mvc/appsettings.json
+++ b/NewsTask.Mvc/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "apis": {
+    "baseAPI": "https://localhost:7265/api",
+    "authorsControllerUrl": "/Authors",
+    "newsControllerUrl": "/News",
+    "getAuthorsApi": "/GetAll"
+  },
+  "ConnectionStrings": {
+    "NewsTaskMvcContext": "Server=(localdb)\\mssqllocaldb;Database=NewsTask.Mvc.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
