add authorization to mvc

--- a/NewsTask.Mvc/appsettings.json
+++ b/NewsTask.Mvc/appsettings.json
@@ -8,11 +8,22 @@
   "AllowedHosts": "*",
   "apis": {
     "baseAPI": "https://localhost:7265/api",
+    "auth": {
+      "authControllerUrl": "/Auth",
+      "loginUrl": "/Login"
+    },
     "authorsControllerUrl": "/Authors",
     "newsControllerUrl": "/News",
     "getAuthorsApi": "/GetAll"
   },
   "ConnectionStrings": {
     "NewsTaskMvcContext": "Server=(localdb)\\mssqllocaldb;Database=NewsTask.Mvc.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  "JWT": {
+    "Key": "1jyw4gAmCczbkLGF9Wx4KcyU7OI+/xDfp2xobDjpNIU=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 30
   }
 }
